added some assest. changed a stitched divider.

--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ body {
 
 .stitch-heading {
   display: inline-block;
-  background-color: #fef1f1;
+  background-color: white;
   padding: 0 40px 0 40px;
 }
 
