--- a/css/main.css
+++ b/css/main.css
@@ -158,8 +158,7 @@ body {
 
 
 .player-container {
-  background-color: #e2e2f4;
-  height: 331px;
+  height: 360px;  /*This will need to change for each screen*/
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -167,7 +166,7 @@ body {
 .video-info-container {
   background-color: #fef1f1;
   box-sizing: border-box;
-  height: auto;
+  height: 360px;
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 10px;
@@ -183,4 +182,44 @@ body {
 .video-info-container img {
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+/****** INSTAGRAM *******/
+
+.instagram-module {
+  margin-bottom: 30px;
+}
+/****** FOOTER *******/
+
+.footer-background {
+  background-image: url('../img/bottom_banner.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.footer-container {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.footer-logo-container {
+  text-align: center;
+}
+
+.footer-banner {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.footer-slogan {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.footer-disclaimer {
+  padding: 30px 0 100px 0;
 }
