centered the video info box and made both boxes a static 360px height.

--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,13 @@ body {
   margin-bottom: 10px;
 }
 
+.video-info-container div {
+  text-align: center;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .video-info-container {
   background-color: #fef1f1;
   box-sizing: border-box;
@@ -172,6 +179,8 @@ body {
   padding: 10px;
   text-align: center;
   font-weight: bold;
+
+
 }
 
 .small-stitch {
