got website interacting with api and the html.  Need to correct the background Image.

--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,12 @@ body {
   margin-bottom: 10px;
 }
 
+
+
+
+/********* SUB-ARTICLES ********/
+/*******************************/
+
 .sub-article {
   background-color: #e2e2f4;
   background-position: center;
