--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,17 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+h1 {
+  font-family: 'Eczar', serif;
+  font-weight: bold;
+  color: #272727;
+}
+
+h3 {
+  font-family: 'Eczar', serif;
+  font-weight: bold;
+  color: #272727;
+}
 
 .header-background {
   background-image: url(../img/top_banner.png);
