added css zoom-effect to sub-articles heading image.

--- a/css/blog_posts.css
+++ b/css/blog_posts.css
@@ -22,6 +22,10 @@
   margin: 10px 0 10px 0;
 }
 
+.enlarge:hover {
+  font-size:
+}
+
 .post-header {
   display: inline-block;
   background-color: white;
