--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ Paragraph text: Regular
 
 Web Address
 https://floralmanifesto.com/
+https://floralmanifesto.com/wp-admin
 
 Instagram
 https://www.instagram.com/floral.manifesto
@@ -163,6 +164,7 @@ h3 {
   margin-top: 10px;
   margin-bottom: 10px;
   text-align: center;
+  overflow: hidden; /*  For zoom-in effect   */
 }
 
 #boss-ladies {
@@ -172,6 +174,22 @@ h3 {
 #reading-list {
   background-image: url('../img/reading_list_image.jpg');
 }
+
+/* CSS Zoom-in Effect */
+
+.sub-article img {
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.sub-article:hover img {
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  /*box-shadow: 0 0 150px white;*/
+}
+
 
 .sub-article-header {
   display: inline-block;
