--- a/css/main.css
+++ b/css/main.css
@@ -164,7 +164,6 @@ h3 {
   margin-top: 10px;
   margin-bottom: 10px;
   text-align: center;
-  overflow: hidden; /*  For zoom-in effect   */
 }
 
 #boss-ladies {
@@ -175,20 +174,7 @@ h3 {
   background-image: url('../img/reading_list_image.jpg');
 }
 
-/* CSS Zoom-in Effect */
 
-.sub-article img {
-  -moz-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-
-.sub-article:hover img {
-  -moz-transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-  /*box-shadow: 0 0 150px white;*/
-}
 
 
 .sub-article-header {
@@ -213,7 +199,7 @@ h3 {
   margin-bottom: 10px;
 }
 
-.video-info-container div {
+.centering-div {
   text-align: center;
   position: relative;
   top: 50%;
