--- a/css/animations.css
+++ b/css/animations.css
@@ -11,15 +11,17 @@
 /******** ARTCILES *********/
 /***************************/
 
-.article {
+.post-background {
   -moz-transition: all 0.3s;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  
 }
 
-.article:hover {
-  box-shadow: 0 0 50px rgb(60, 60, 60);
+.post-background:hover {
+  transform: scale(1.2);
 }
+
 
 
 
@@ -37,7 +39,7 @@
 }
 
 .sub-article:hover {
-  box-shadow: 0 0 50px rgb(60, 60, 60);
+
 }
 
 .sub-article img {
@@ -63,7 +65,7 @@
 }
 
 .video-info-container:hover {
-  box-shadow: 0 0 50px rgb(60, 60, 60);
+
 }
 
 .centering-div p a {
