--- a/css/blog_posts.css
+++ b/css/blog_posts.css
@@ -1,29 +1,33 @@
 
 #latest-post {
+  box-sizing: border-box;
+  color: white;
+  position: relative;
+  text-align: left;
+  overflow: hidden;
+}
+
+.post-background {
   background-image: url();
   background-position: center;
   background-size: cover;
+  position: absolute;
+  z-index: 1;  /*so the background stays behind headers*/
   box-sizing: border-box;
-  color: white;
-  padding: 20px;
-  text-align: left;
+  width: 100%;
+  height: 100%;
 }
 
-.post-image-shell {
-  background-color: transparent;
-  width: 100%;
-  height: 50%;
+
+
+#post-header-shell {
+  position: relative;
+  margin: 20px;
+  z-index: 2;
 }
 
 .latest-post-header-container {
-  /*position: relative;
-  top: 50%;
-  transform: translateY(-50%);*/
   margin: 10px 0 10px 0;
-}
-
-.enlarge:hover {
-  font-size:
 }
 
 .post-header {
@@ -35,18 +39,33 @@
   padding: 0 10px 0 10px;
 }
 
+
+/*---- other posts ----*/
+.post-image-shell {
+  background-color: transparent;
+  width: 100%;
+  height: 50%;
+}
+
+/*.enlarge:hover {
+  font-size:
+}*/
+
 .sub-post {
-  background-image: url();
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  box-sizing: border-box;
+  color: white;
+  position: relative;
+  text-align: left;
+  overflow: hidden;
 }
 
 .sub-post-header-container {
   background-color: #fef1f1;
+  position: relative;
   width: 100%;
   height: 50%;
   text-align: center;
+  z-index: 2;
 }
 
 .sub-post-header-shell {
