--- a/css/animations.css
+++ b/css/animations.css
@@ -15,11 +15,15 @@
   -moz-transition: all 0.3s;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
-  
+
 }
 
-.post-background:hover {
+.article:hover .post-background {
   transform: scale(1.2);
+}
+
+.article:hover {
+  border: 1px solid black;
 }
 
 
