--- a/css/blog_posts.css
+++ b/css/blog_posts.css
@@ -1,4 +1,12 @@
 
+
+.article {
+  height: 400px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+
 #latest-post {
   box-sizing: border-box;
   color: white;
@@ -19,7 +27,7 @@
 }
 
 
-
+/*for the latest/main post*/
 #post-header-shell {
   position: relative;
   margin: 20px;
@@ -48,11 +56,10 @@
 }
 
 
-.sub-post {
-  box-sizing: border-box;
-  color: white;
+.article-preview-container {
+  width: 100%;
+  height: 100%;
   position: relative;
-  text-align: left;
   overflow: hidden;
 }
 
