made the sub-post section responsive and added a responsive.css file which holds all the bootstrap breakpoints.

--- a/css/animations.css
+++ b/css/animations.css
@@ -22,8 +22,9 @@
   transform: scale(1.2);
 }
 
+/*if you want to add a border to article on hover*/
 .article:hover .article-preview-container {
-  border: 1px solid black;
+
 }
 
 
