--- a/css/responsive.css
+++ b/css/responsive.css
@@ -31,3 +31,10 @@
 @media only screen and (max-width : 320px) {
 
 }
+
+/* Custom, specific for footer */
+@media only screen and (max-width : 628px) {
+  .footer-banner:nth-child(odd) {
+    display: none;
+  }
+}
